--- a/env.example
+++ b/env.example
@@ -6,6 +6,10 @@ VITE_FIREBASE_STORAGE_BUCKET=your_project.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 VITE_FIREBASE_APP_ID=your_app_id
 
+# Supabase Configuration (for card database)
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+
 # Note: These are example values
-# Copy this file to .env and replace with your actual Firebase configuration
+# Copy this file to .env and replace with your actual configuration
 # Do not commit the .env file to version control
