--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^24.3.0",
     "autoprefixer": "^10.4.21",
+    "dotenv": "^17.2.1",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
