--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ supabase-schema.sql
 card-data.json
 test-supabase.js
 SUPABASE_SETUP.md
+supabase-rls-fix.sql
 
 # Editor directories and files
 .vscode/*
