feat: Enhanced local card image system with PNG/JPG fallback support
- Updated ImageService to handle mixed PNG/JPG formats
- Enhanced CardImage component with intelligent fallback logic
- Added automatic format detection and retry mechanism
- Excluded card images from repository via .gitignore
- Supports 2,018+ card images across 45 sets locally

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ create-placeholder.js
 # Card images folder
 card-images/
 
+# Local card images (uncomment if you don't want to commit large image files)
+public/images/cards/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
