Add Google Drive and Dropbox image hosting solutions with upload scripts and comprehensive guide

--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "autoprefixer": "^10.4.21",
     "dotenv": "^17.2.1",
     "firebase": "^12.2.1",
+    "form-data": "^4.0.4",
     "framer-motion": "^12.23.12",
+    "googleapis": "^159.0.0",
     "lucide-react": "^0.542.0",
+    "node-fetch": "^3.3.2",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
